# clims_code

./: .gitignore  MANIFEST.in  MORNING_REPORT.md  PROGRESS.md  README.md  pyproject.toml
clims_cli/: __init__.py  input_queue.py  interrupt.py  main.py  notify.py  prompt.py  render.py  repl.py  telegram_bot.py
clims_core/: __init__.py  agent_types.py  background.py  checkpoints.py  commands.py  config.py  devtools.py  diagnostics.py  http.py  images.py  keybindings.py  mentions.py  orchestrate.py  redact.py  research.py  safety.py  scheduler.py  selfconfig.py  styles.py  telemetry.py  updater.py  vision.py  workflows.py
clims_server/: __init__.py  api.py
docs/: 00-OVERVIEW.md  01-ARCHITECTURE.md  02-FEATURE-PARITY.md  03-PROVIDERS.md  04-API.md  05-MCP.md  06-TOOLS.md  07-PERMISSIONS.md  08-ROADMAP.md  09-DECISIONS.md  BENCHMARKS.md  MANUAL_TESTING.md  USAGE.md  USER_GUIDE.md
tests/: fake_provider.py  mcp_echo_server.py  test_batch1.py  test_batch2.py  test_batch3.py  test_batch4.py  test_batch5.py  test_commands.py  test_compaction.py  test_deeper_tools.py  test_extras.py  test_full_deps.py  test_gemini.py  test_harness_depth.py  test_hooks.py  test_image_tool_result.py  test_interrupt.py  test_loop.py  test_mcp.py  test_mcp_chat_connect.py  test_mcp_http.py  test_mcp_registry.py  test_memory.py  test_message.py  test_openai_shim.py  test_orchestrate.py  test_orchestration2.py  test_plan_mode.py  test_proactive_memory.py  test_providers.py  test_reliability.py  test_render.py  test_render_ux.py  test_repl_smoke.py  test_retry.py  test_safety.py  test_selfconfig.py  (+12 more)
(+65 files in other folders)
